[package]
name = "longboy-proto"
description = "longboy networking protocol"
version = "1.0.0"
license = "BSD-3-Clause"
repository = "https://github.com/JKurzer/longboy"
edition = "2021"
autotests = false

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]

[dev-dependencies]

[features]
